added text for the contact, project, & form sections and fixed the grid styling on the skills section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
         <section id='about' class='about'>
             <div class='wrapper about-content'>
                 <h2>about me</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicingelit. Optio 
-                    obcaecati soluta doloribus facere accusantium laborum voluptate harum
-                    itaque. Maiores nulla impedit aperiam facere dolor neque similique 
-                    laudantium voluptates beatae culpa.</p>
+                <p> Hi there! My name is Hara, I'm a front-end web developer from Toronto with a diverse professional background that 
+                    includes experience as a team leader, sales collaborator and customer support specalist. Through these experiences I've 
+                    developed strong communication skills, attention to detail & a customer-centric mindset with a passion for problem-
+                    solving. I've also learned to work with diverse teams, manage complex workflows and adapt quickly to changing business 
+                    needs. As a developer, I'm eager to use my skills to create user-friendly, functional websites that meet the needs of 
+                    both customers and stakeholders.
+                </p>
             </div>
         </section>
         <section class='skills-section'>
@@ -66,7 +69,7 @@
                     </li>
                     <li>
                         <i class="fa-brands fa-github"></i>
-                        <p>Git and <br>GitHub</br></p> 
+                        <p>Git</p> 
                     </li>
                     <li>
                         <i class="fa-brands fa-square-js"></i> 
@@ -114,6 +117,8 @@
                                 </div>
                                 <div class='project-info'>
                                     <h3>Bar-One</h3>
+                                    <p> A multipage bar & restaurant website created using HTML, CSS & JS, as part of a project at Juno 
+                                        College.</p>
                                     <div class='technical-skills'>
                                         <ul>
                                             <li><i class="fa-brands fa-html5 fa-xl"></i></li>
@@ -121,7 +126,6 @@
                                             <li><i class="fa-brands fa-square-js fa-xl"></i></li>
                                         </ul>
                                     </div>
-                                    <p>A multipage restaurant website created using HTML & CSS.</p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -134,15 +138,18 @@
                                 </div>
                                 <div class='project-info'>
                                     <h3>The Cocktail Library</h3>
+                                    <p> An app that allows users to find a perfect cocktail recipe for a fun night in. This project was 
+                                        created with my partner <a href="https://github.com/jonathanphill">Jonathan</a> using pair -
+                                        programming & TheCocktailDB API; along with JS, CSS & HTML.</p>
                                     <div class='technical-skills'>
                                         <ul>
                                             <li><i class="fa-brands fa-html5 fa-xl"></i></li>
                                             <li><i class="fa-brands fa-css3-alt fa-xl"></i></li>
                                             <li><i class="fa-brands fa-square-js fa-xl"></i></li>
                                             <li><i class="fa-solid fa-gears fa-xl"></i></li>
+                                            <li><i class="fa-solid fa-user-group"></i></li>
                                         </ul>
                                     </div>
-                                    <p>A website that helps you find a cocktail recipe using an API.  </p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -156,14 +163,15 @@
                                 <div class='project-info'>
                                     <h3>Project 3</h3>
                                     <div class='technical-skills'>
-                                        <ul>
+                                        <p> Coming soon ...</p>
+                                        <ul >
                                             <li><i class="fa-brands fa-html5 fa-xl"></i></li>
                                             <li><i class="fa-brands fa-css3-alt fa-xl"></i></li>
                                             <li><i class="fa-brands fa-square-js fa-xl"></i></li>
                                             <li><i class="fa-brands fa-react fa-xl"></i></li>
                                         </ul>
+
                                     </div>
-                                    <p>Coming soon ...</p>
                                     <div class='project-links'>
                                         <a class='live-link' href="">Live Site</a>
                                         <a class ='git-link' href="">GitHub</a>
@@ -177,10 +185,7 @@
         <section id='contact' class='contact'>
             <div class='wrapper contact-info'>
                 <h2>get in touch</h2>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                        Maiores, tenetur impedit ipsum aut est hic, totam corrupti nemo 
-                        modi vero, eligendi maxime nihil distinctio? Veniam sint vitae 
-                        dolores laboriosam dicta.</p>
+                <p> Want to work together? Please feel free to contact me below.</p>
                 <div class='contact-links'>
                     <a href="">
                         <i class="fa-brands fa-linkedin  fa-lg"></i>
