deleted unused images & added js to close nav once link has been selected

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 </div> <!-- end of nav-header -->
                 <nav class='nav-links' id='nav-links'>
                     <ul>
-                        <li class="nav-link"><a href="#home">home</a></li>
-                        <li class="nav-link"><a href="#about">about</a></li>
-                        <li class="nav-link"><a href="#projects">projects</a></li>
-                        <li class="nav-link"><a href="#contact"><span>contact</span></a></li>
+                        <li id='nav-link' class='nav-link'><a href="#home">home</a></li>
+                        <li id='nav-link' class='nav-link'><a href="#about">about</a></li>
+                        <li id='nav-link' class='nav-link'><a href="#projects">projects</a></li>
+                        <li id='nav-link' class='nav-link'><a href="#contact"><span>contact</span></a></li>
                     </ul>
                 </nav>
             </div> <!-- end of nav-links -->
@@ -113,7 +113,7 @@
                         <ul>
                             <li class='project1'>
                                 <div class='project-img'>
-                                    <img src="./asset/left-image.jpg" alt="Restaurant bar counter with hanging lights, exposed shelves of 
+                                    <img src="./asset/bar-image.jpg" alt="Restaurant bar counter with hanging lights, exposed shelves of 
                                     alcohol, drinking glasses and flowers on the bar top.">
                                 </div>
                                 <div class='project-info'>
@@ -160,7 +160,7 @@
                             </li>
                             <li class='project3'>
                                 <div class='project-img'>
-                                    <img src="./asset/image-1.jpg" alt="A tiger sitting in a forest">
+                                    <img src="./asset/tiger-image.jpg" alt="A tiger sitting in a forest">
                                 </div>
                                 <div class='project-info'>
                                     <h3>Project 3</h3>
@@ -217,13 +217,10 @@
         </section>
     </main>
     <footer>
-        <div>
             <p>Created by Hara © 2023</p>
-        </div>
     </footer>
 
-    <script src='./script/navSection.js'></script>
-    <script src='./script/contactForm.js'></script>
+    <script src='./scripts/scripts.js'></script>
 </body>
 </html>
 
