--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class='nav-bar'>
             <div class='container flex-nav'>
                 <div class='nav-header'>
-                    <a>hh.</a>
+                    <a class='logo'>hh.</a>
                     <button class='nav-toggle' id='nav-toggle'>
                         <i class='fas fa-bars'></i>
                     </button>   
