final commit adding scroll to top arrow

--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
                     </form>
                 </div> <!-- end of contact-form div -->
             </div> <!-- end of contact wrapper -->
-        </section>
+            <a href="#" class='to-top'>
+                <i class="fa-sharp fa-solid fa-circle-chevron-up"></i>
+            </a>
+        </section>       
     </main>
     <footer>
         <p>Created by Hara © 2023</p>
