--- a/index.html
+++ b/index.html
@@ -111,28 +111,6 @@
             <div class='wrapper'>
                 <div class="project-list">
                         <ul>
-                            <li class='project1'>
-                                <div class='project-img'>
-                                    <img src="./asset/bar-image.jpg" alt="Restaurant bar counter with hanging lights, exposed shelves of 
-                                    alcohol, drinking glasses and flowers on the bar top.">
-                                </div>
-                                <div class='project-info'>
-                                    <h3>Bar-One</h3>
-                                    <p> A multipage bar & restaurant website created using HTML, CSS & JS, as part of a project at Juno 
-                                        College.</p>
-                                    <div class='technical-skills'>
-                                        <ul>
-                                            <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
-                                            <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
-                                            <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
-                                        </ul>
-                                    </div>
-                                    <div class='project-links'>
-                                        <a class='live-link' href="https://bar-one-project-one.netlify.app/">Live Site</a>
-                                        <a class ='git-link' href="https://github.com/harah24/hara-hordofa-project-one">GitHub</a>
-                                    </div> <!-- end of project-links div -->
-                                </div> <!-- end of project info div -->
-                            </li>
                             <li class='project2'>
                                 <div class='project-img'>
                                     <img src="./asset/pexels-karolina-grabowska-4021976.jpg" alt="A cocktail drink in a clear glass with 
@@ -143,42 +121,64 @@
                                     <p> An app that allows users to find a perfect cocktail recipe for a fun night in. This project was 
                                         created with my partner <a href="https://github.com/jonathanphill">Jonathan</a> using pair -
                                         programming & TheCocktailDB API; along with JS, CSS & HTML.</p>
-                                    <div class='technical-skills'>
-                                        <ul>
-                                            <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
-                                            <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
-                                            <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
-                                            <li><i class="fa-solid fa-gears fa-xl" alt='Rest API icon'></i></li>
-                                            <li><i class="fa-solid fa-user-group" alt='Paired Programming icon'></i></li>
-                                        </ul>
+                                        <div class='technical-skills'>
+                                            <ul>
+                                                <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
+                                                <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
+                                                <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
+                                                <li><i class="fa-solid fa-gears fa-xl" alt='Rest API icon'></i></li>
+                                                <li><i class="fa-solid fa-user-group" alt='Paired Programming icon'></i></li>
+                                            </ul>
+                                        </div>
+                                        <div class='project-links'>
+                                            <a class='live-link' href="https://thecocktail-library.netlify.app">Live Site</a>
+                                            <a class ='git-link' href="https://github.com/settings/organizations">GitHub</a>
+                                        </div>
+                                    </div> <!-- end of project info div -->
+                                </li>
+                                <li class='project3'>
+                                    <div class='project-img'>
+                                        <img src="./asset/project3.jpg" alt="Dine-in website page with images of food">
                                     </div>
-                                    <div class='project-links'>
-                                        <a class='live-link' href="https://thecocktail-library.netlify.app">Live Site</a>
-                                        <a class ='git-link' href="https://github.com/settings/organizations">GitHub</a>
+                                    <div class='project-info'>
+                                        <h3>Project 3</h3>
+                                        <div class='technical-skills'>
+                                            <p> An app that simplifies the process of cooking by providing the user recipe inspirations from around the world.</p>
+                                            <ul >
+                                                <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
+                                                <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
+                                                <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
+                                                <li><i class="fa-brands fa-react fa-xl" alt='React icon'></i></li>
+                                            </ul>
+                                        </div> <!-- end of technical skills div -->
+                                        <div class='project-links'>
+                                            <a class='live-link' href="https://dine-in-app.netlify.app/">Live Site/</a>
+                                            <a class ='git-link' href="https://github.com/harah24/project-3">GitHub</a>
+                                        </div>
+                                    </div> <!-- end of project info div -->
+                                </li>
+                                <li class='project1'>
+                                    <div class='project-img'>
+                                        <img src="./asset/bar-image.jpg" alt="Restaurant bar counter with hanging lights, exposed shelves of 
+                                        alcohol, drinking glasses and flowers on the bar top.">
                                     </div>
-                                </div> <!-- end of project info div -->
-                            </li>
-                            <li class='project3'>
-                                <div class='project-img'>
-                                    <img src="./asset/tiger-image.jpg" alt="A tiger sitting in a forest">
-                                </div>
-                                <div class='project-info'>
-                                    <h3>Project 3</h3>
-                                    <div class='technical-skills'>
-                                        <p> Coming soon...</p>
-                                        <ul >
-                                            <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
-                                            <li><i class="fa-brands fa-css3-alt fa-xl" alt='Css icon'></i></li>
-                                            <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
-                                            <li><i class="fa-brands fa-react fa-xl" alt='React icon'></i></li>
-                                        </ul>
-                                    </div> <!-- end of technical skills div -->
-                                    <div class='project-links'>
-                                        <a class='live-link' href="#">Live Site</a>
-                                        <a class ='git-link' href="https://github.com/harah24/portfolio">GitHub</a>
-                                    </div>
-                                </div> <!-- end of project info div -->
-                            </li>
+                                    <div class='project-info'>
+                                        <h3>Bar-One</h3>
+                                        <p> A multipage bar & restaurant website created using HTML, CSS & JS, as part of a project at Juno 
+                                            College.</p>
+                                        <div class='technical-skills'>
+                                            <ul>
+                                                <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
+                                                <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
+                                                <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
+                                            </ul>
+                                        </div>
+                                        <div class='project-links'>
+                                            <a class='live-link' href="https://bar-one-project-one.netlify.app/">Live Site</a>
+                                            <a class ='git-link' href="https://github.com/harah24/hara-hordofa-project-one">GitHub</a>
+                                        </div> <!-- end of project-links div -->
+                                    </div> <!-- end of project info div -->
+                                </li>
                         </ul>
                     </div>
             </div><!-- end of wrapper -->
