--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-user-group" alt='Paired Programming icon'></i>
-                        <p>Paired <br>Programming</br></p>
+                        <p>Paired <br>Programming</br> </p>
                     </li>
                     <li>
                         <i class="fa-solid fa-gears" alt='Rest APIs icon'></i>
@@ -141,7 +141,7 @@
                                         <img src="./asset/project3.jpg" alt="Dine-in website page with images of food">
                                     </div>
                                     <div class='project-info'>
-                                        <h3>Project 3</h3>
+                                        <h3>Dine-In</h3>
                                         <div class='technical-skills'>
                                             <p> An app that simplifies the process of cooking by providing the user recipe inspirations from around the world.</p>
                                             <ul >
@@ -157,25 +157,25 @@
                                         </div>
                                     </div> <!-- end of project info div -->
                                 </li>
-                                <li class='project1'>
+                                <li class='project4'>
                                     <div class='project-img'>
-                                        <img src="./asset/bar-image.jpg" alt="Restaurant bar counter with hanging lights, exposed shelves of 
-                                        alcohol, drinking glasses and flowers on the bar top.">
+                                        <img src="./asset/project4.jpg" alt="Giphy Sentiments home page">
                                     </div>
                                     <div class='project-info'>
                                         <h3>Bar-One</h3>
-                                        <p> A multipage bar & restaurant website created using HTML, CSS & JS, as part of a project at Juno 
-                                            College.</p>
+                                        <p> A unique app that captures the ever-changing emotional state of individuals using Gifs.</p>
                                         <div class='technical-skills'>
-                                            <ul>
-                                                <li><i class="fa-brands fa-html5 fa-xl" alt='HTML icon'></i></li>
+                                            <ul>                                           
                                                 <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
                                                 <li><i class="fa-brands fa-square-js fa-xl" alt='JavaScript icon'></i></li>
+                                                <li><i class="fa-brands fa-react fa-xl" alt='React icon'></i></li>
+                                                <li><i class="fa-solid fa-gears" alt='Rest APIs icon'></i></li>
+                                                <li><i class="devicon-firebase-plain" alt='Firebase icon'></i></li>
                                             </ul>
                                         </div>
                                         <div class='project-links'>
-                                            <a class='live-link' href="https://bar-one-project-one.netlify.app/">Live Site</a>
-                                            <a class ='git-link' href="https://github.com/harah24/hara-hordofa-project-one">GitHub</a>
+                                            <a class='live-link' href="https://giphy-sentiments.netlify.app/">Live Site</a>
+                                            <a class ='git-link' href="https://github.com/Giphy-Sentiments">GitHub</a>
                                         </div> <!-- end of project-links div -->
                                     </div> <!-- end of project info div -->
                                 </li>
