updated asset folder

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                                         <img src="./asset/project4.jpg" alt="Giphy Sentiments home page">
                                     </div>
                                     <div class='project-info'>
-                                        <h3>Bar-One</h3>
-                                        <p> A unique app that captures the ever-changing emotional state of individuals using Gifs.</p>
+                                        <h3>Giphy Sentiments</h3>
+                                        <p> A unique app that captures & logs the ever-changing emotional state of individuals using Gifs.</p>
                                         <div class='technical-skills'>
                                             <ul>                                           
                                                 <li><i class="fa-brands fa-css3-alt fa-xl" alt='CSS icon'></i></li>
